# clauselens

./: .env.example  .gitignore  README.md  pyproject.toml
.claude/: launch.json
.github/workflows/: ci.yml
eval_runs/cmp-gemma-4-31b-it-train15/: meta.json  predictions.jsonl  report.md
eval_runs/cmp-gpt-oss-120b-train15/: meta.json  predictions.jsonl  report.md
eval_runs/gemma4-31b-baseline-train10/: predictions.jsonl  report.md
eval_runs/gemma4-31b-iter1-train10/: predictions.jsonl  report.md
eval_runs/gemma4-31b-iter2-train10/: meta.json  predictions.jsonl  report.md
eval_runs/gemma4-31b-iter2-train30/: meta.json  predictions.jsonl  report.md
eval_runs/gemma4-31b-test40/: meta.json  predictions.jsonl  report.md
eval_runs/gemma4-baseline-train10/: meta.json
eval_runs/nemotron550b-baseline-train10/: meta.json  predictions.jsonl
eval_runs/qa-gemma4-31b-iter1-train10/: answers.jsonl  meta.json  report.md
eval_runs/qa-gemma4-31b-train10/: answers.jsonl  report.md
scripts/: ask.py  download_data.sh  extract_one.py  plot_results.py  run_eval.py  run_qa_eval.py
src/clauselens/: clauses.py  dataset.py  evaluation.py  extraction.py  llm.py  qa.py  render.py  retrieval.py  web.py
src/clauselens/static/: index.html
tests/: test_evaluation.py  test_extraction.py  test_llm.py  test_qa.py  test_render.py
