[project]
name = "clauselens"
version = "0.1.0"
description = "AI contract analysis: clause extraction, risk flagging, and cited Q&A, evaluated against CUAD"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Volodymyr Kozachok" }]
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.136.3",
    "jinja2>=3.1.6",
    "openai>=1.50",
    "pydantic>=2.7",
    "python-dotenv>=1.2.2",
    "rank-bm25>=0.2.2",
    "uvicorn[standard]>=0.49.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.6"]
viz = [
    "matplotlib>=3.11.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/clauselens"]

[tool.ruff]
line-length = 100
src = ["src"]
